[package]
name = "hanzo"
version = "0.2.0"
edition = "2021"

[profile.release]
strip = "symbols"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
rand = "0.8"
crossterm = "0.25"
log = "0.4"
simple-logging = "2.0"
toml = "0.7"
clap = { version = "3.2", features = ["derive"] }
